--- a/index.html
+++ b/index.html
@@ -5,6 +5,390 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<
+<div class="content" style="    width: 1000px;margin: 0 auto;">
+    <!-- put in #content div on page https://www.autoersatzteile.de/ -->
+
+    <div class="mainFilterSearch">
+        <div class="mainFilterSearchWrapper">
+            <div class="mainFilterSearchTitle"><b>Autoteile: Fahrzeug auswählen</b></div>
+            <div class="mainFilters tableDiv">
+                <div class="tableCell">
+                    <div class="customSelect active">
+                        <span class="direct">1</span>
+                        <select>
+                            <option>Marke wahlen</option>
+                            <option>Marke wahlen</option>
+                            <option>Marke wahlen</option>
+                            <option>Marke wahlen</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="tableCell">
+                    <div class="customSelect">
+                        <span class="direct">2</span>
+                        <select>
+                            <option>Marke wahlen</option>
+                            <option>Marke wahlen</option>
+                            <option>Marke wahlen</option>
+                            <option>Marke wahlen</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="tableCell">
+                    <div class="customSelect">
+                        <span class="direct">3</span>
+                        <select>
+                            <option>Marke wahlen</option>
+                            <option>Marke wahlen</option>
+                            <option>Marke wahlen</option>
+                            <option>Marke wahlen</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="tableCell">
+                    <button class="submit"><span>Suchen</span></button>
+                </div>
+                <div class="tableCell">
+                    <img src="img/car-search.png" alt="" title="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mainSearchCategory">
+        <label for="mainSearchInput">Enter category name:</label>
+        <input type="text" id="mainSearchInput" class="searchInput">
+        <input type="submit" class="searchSubmit">
+    </div>
+    <div class="breadCrumbsWrapper">
+        <a href="">Automarke</a>
+        <a href="">Automarke</a>
+        <a href="">Automarke</a>
+        <span>Automarke</span>
+    </div>
+    <div class="mainCategoryList">
+        <div class="tableDiv">
+            <div class=" categoryList">
+                <ul>
+                    <li>
+                        <a href="" class="active">Bremsanlage/ABS/ESP</a>
+                    </li>
+                    <li>
+                        <a href="">Anhängevorrichtung/-anbauteile</a>
+                    </li>
+                    <li>
+                        <a href="">Elektrik/Generator/Starter/Scheinwerfer</a>
+                    </li>
+                    <li>
+                        <a href="">Federung/ Stoßdämpfer</a>
+                    </li>
+                    <li>
+                        <a href="">Getriebe-/lagerung</a>
+                    </li>
+                    <li>
+                        <a href="">Heizung/Lüftung</a>
+                    </li>
+                    <li>
+                        <a href="">Informations-/Kommunikationssysteme</a>
+                    </li>
+                    <li>
+                        <a href="">Karosserie/Leuchten/Gasfedern</a>
+                    </li>
+                    <li>
+                        <a href="">Anhängevorrichtung/-anbauteile</a>
+                    </li>
+                    <li>
+                        <a href="">Elektrik/Generator/Starter/Scheinwerfer</a>
+                    </li>
+                    <li>
+                        <a href="">Federung/ Stoßdämpfer</a>
+                    </li>
+                    <li>
+                        <a href="">Getriebe-/lagerung</a>
+                    </li>
+                    <li>
+                        <a href="">Heizung/Lüftung</a>
+                    </li>
+                    <li>
+                        <a href="">Informations-/Kommunikationssysteme</a>
+                    </li>
+                    <li>
+                        <a href="">Karosserie/Leuchten/Gasfedern</a>
+                    </li>
+                    <li>
+                        <a href="">Anhängevorrichtung/-anbauteile</a>
+                    </li>
+                    <li>
+                        <a href="">Elektrik/Generator/Starter/Scheinwerfer</a>
+                    </li>
+                    <li>
+                        <a href="">Federung/ Stoßdämpfer</a>
+                    </li>
+                    <li>
+                        <a href="">Getriebe-/lagerung</a>
+                    </li>
+                    <li>
+                        <a href="">Heizung/Lüftung</a>
+                    </li>
+                    <li>
+                        <a href="">Informations-/Kommunikationssysteme</a>
+                    </li>
+                    <li>
+                        <a href="">Karosserie/Leuchten/Gasfedern</a>
+                    </li>
+                </ul>
+            </div>
+            <div class=" categoryItemsList">
+                <div class="imageItems">
+                    <div class="imageItemsTitle">Bremsanlage/ABS/ESP fur MERCEDES-BENZ T2/LN1 Bus O 611 D (672.372, 672.373) Baujahr ab 07.1987, 116 PS</div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="img/item1.png" alt="" title="">
+                        </div>
+                        <div class="title">
+                            <span><span>Front Bremsbeläge</span></span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="img/item1.png" alt="" title="">
+                        </div>
+                        <div class="title">
+                            <span><span>Front Bremsbeläge</span></span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="img/item1.png" alt="" title="">
+                        </div>
+                        <div class="title">
+                            <span><span>Front Bremsbeläge</span></span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="img/item1.png" alt="" title="">
+                        </div>
+                        <div class="title">
+                            <span><span>Front Bremsbeläge</span></span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="img/item1.png" alt="" title="">
+                        </div>
+                        <div class="title">
+                            <span><span>Front Bremsbeläge</span></span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="img/item1.png" alt="" title="">
+                        </div>
+                        <div class="title">
+                            <span><span>Front Bremsbeläge</span></span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="img/item1.png" alt="" title="">
+                        </div>
+                        <div class="title">
+                            <span><span>Front Bremsbeläge</span></span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="img/item1.png" alt="" title="">
+                        </div>
+                        <div class="title">
+                            <span><span>Front Bremsbeläge</span></span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="img/item1.png" alt="" title="">
+                        </div>
+                        <div class="title">
+                            <span><span>Front Bremsbeläge</span></span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="img/item1.png" alt="" title="">
+                        </div>
+                        <div class="title">
+                            <span><span>Front Bremsbeläge</span></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="listItems">
+                    <ul>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                        <li>
+                            <a href="">Anhängevorrichtung</a>
+                        </li>
+                        <li>
+                            <a href="">Scheinwerfer</a>
+                        </li>
+                        <li>
+                            <a href="">Federungr</a>
+                        </li>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                        <li>
+                            <a href="">Anhängevorrichtung</a>
+                        </li>
+                        <li>
+                            <a href="">Scheinwerfer</a>
+                        </li>
+                        <li>
+                            <a href="">Federungr</a>
+                        </li>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                        <li>
+                            <a href="">Anhängevorrichtung</a>
+                        </li>
+                        <li>
+                            <a href="">Scheinwerfer</a>
+                        </li>
+                        <li>
+                            <a href="">Federungr</a>
+                        </li>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                        <li>
+                            <a href="">Anhängevorrichtung</a>
+                        </li>
+                        <li>
+                            <a href="">Scheinwerfer</a>
+                        </li>
+                        <li>
+                            <a href="">Federungr</a>
+                        </li>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                        <li>
+                            <a href="">Anhängevorrichtung</a>
+                        </li>
+                        <li>
+                            <a href="">Scheinwerfer</a>
+                        </li>
+                        <li>
+                            <a href="">Federungr</a>
+                        </li>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                        <li>
+                            <a href="">Anhängevorrichtung</a>
+                        </li>
+                        <li>
+                            <a href="">Scheinwerfer</a>
+                        </li>
+                        <li>
+                            <a href="">Federungr</a>
+                        </li>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                        <li>
+                            <a href="">Anhängevorrichtung</a>
+                        </li>
+                        <li>
+                            <a href="">Scheinwerfer</a>
+                        </li>
+                        <li>
+                            <a href="">Federungr</a>
+                        </li>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                        <li>
+                            <a href="">Anhängevorrichtung</a>
+                        </li>
+                        <li>
+                            <a href="">Scheinwerfer</a>
+                        </li>
+                        <li>
+                            <a href="">Federungr</a>
+                        </li>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                        <li>
+                            <a href="">Anhängevorrichtung</a>
+                        </li>
+                        <li>
+                            <a href="">Scheinwerfer</a>
+                        </li>
+                        <li>
+                            <a href="">Federungr</a>
+                        </li>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                        <li>
+                            <a href="">Anhängevorrichtung</a>
+                        </li>
+                        <li>
+                            <a href="">Scheinwerfer</a>
+                        </li>
+                        <li>
+                            <a href="">Federungr</a>
+                        </li>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                        <li>
+                            <a href="">Anhängevorrichtung</a>
+                        </li>
+                        <li>
+                            <a href="">Scheinwerfer</a>
+                        </li>
+                        <li>
+                            <a href="">Federungr</a>
+                        </li>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                        <li>
+                            <a href="">Anhängevorrichtung</a>
+                        </li>
+                        <li>
+                            <a href="">Scheinwerfer</a>
+                        </li>
+                        <li>
+                            <a href="">Federungr</a>
+                        </li>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                        <li>
+                            <a href="">Anhängevorrichtung</a>
+                        </li>
+                        <li>
+                            <a href="">Scheinwerfer</a>
+                        </li>
+                        <li>
+                            <a href="">Federungr</a>
+                        </li>
+                        <li>
+                            <a href="">Bremsanlage</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- END put in #content div on page https://www.autoersatzteile.de/ -->
+</div>
 </body>
 </html>
