--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <title>Autoteile</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/ie-fix.css">
 </head>
 <body>
 <div class="content" style="    width: 1000px;margin: 0 auto;">
@@ -15,12 +16,7 @@
                 <div class="tableCell">
                     <div class="customSelect active">
                         <span class="direct">1</span>
-                        <select>
-                            <option>Marke wahlen</option>
-                            <option>Marke wahlen</option>
-                            <option>Marke wahlen</option>
-                            <option>Marke wahlen</option>
-                        </select>
+                        <select id="form_maker_id" name="maker_id"><option value="0" selected="">Marke wählen</option><optgroup label="Populärste hersteller"><option value="121">VW</option><option value="74">MERCEDES-BENZ</option><option value="84">OPEL</option><option value="5">AUDI</option><option value="16">BMW</option><option value="36">FORD</option><option value="93">RENAULT</option><option value="35">FIAT</option><option value="88">PEUGEOT</option><option value="80">NISSAN</option></optgroup><optgroup label="Hersteller alphabetisch geordnet"><option value="2">ALFA ROMEO</option><option value="5">AUDI</option><option value="16">BMW</option><option value="819">CADILLAC</option><option value="138">CHEVROLET</option><option value="20">CHRYSLER</option><option value="21">CITROЁN</option><option value="139">DACIA</option><option value="185">DAEWOO</option><option value="25">DAIHATSU</option><option value="29">DODGE</option><option value="700">FERRARI</option><option value="35">FIAT</option><option value="36">FORD</option><option value="45">HONDA</option><option value="183">HYUNDAI</option><option value="54">ISUZU</option><option value="56">JAGUAR</option><option value="882">JEEP</option><option value="184">KIA</option><option value="701">LAMBORGHINI</option><option value="64">LANCIA</option><option value="1820">LAND ROVER</option><option value="842">LEXUS</option><option value="72">MAZDA</option><option value="74">MERCEDES-BENZ</option><option value="75">MG</option><option value="1523">MINI</option><option value="77">MITSUBISHI</option><option value="80">NISSAN</option><option value="84">OPEL</option><option value="88">PEUGEOT</option><option value="92">PORSCHE</option><option value="93">RENAULT</option><option value="95">ROVER</option><option value="99">SAAB</option><option value="104">SEAT</option><option value="106">SKODA</option><option value="1138">SMART</option><option value="175">SSANGYONG</option><option value="107">SUBARU</option><option value="109">SUZUKI</option><option value="111">TOYOTA</option><option value="120">VOLVO</option><option value="121">VW</option></optgroup></select>
                     </div>
                 </div>
                 <div class="tableCell">
