page new blocks

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <meta charset="UTF-8">
     <title>Autoteile</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/ie-fix.css">
 </head>
 <body>
 <div class="content" style="    width: 1000px;margin: 0 auto;">
@@ -379,6 +378,180 @@
                             <a href="">Bremsanlage</a>
                         </li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="brandsLogos">
+        <div class="brandsTitle">
+            Top Autoteile Hersteller
+        </div>
+        <div class="brandsList">
+            <div class="tableDiv">
+                <div class="tableCell">
+                    <img src="img/30.png" alt="" title="">
+                </div>
+                <div class="tableCell">
+                    <img src="img/2.png" alt="" title="">
+                </div>
+                <div class="tableCell">
+                    <img src="img/312.png" alt="" title="">
+                </div>
+                <div class="tableCell">
+                    <img src="img/101.png" alt="" title="">
+                </div>
+                <div class="tableCell">
+                    <img src="img/32.png" alt="" title="">
+                </div>
+                <div class="tableCell">
+                    <img src="img/11.png" alt="" title="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="saleBlock">
+        <div class="saleTitle">
+            Top Autoteile fur MERCEDES-BENZ T2/LN1 Bus O 611 D (672.372, 672.373) Baujahr ab 07.1987, 116 PS
+        </div>
+        <div class="saleList">
+            <div class="saleWrapper">
+                <div class="saleItem">
+                    <div class="imageBlock">
+                        <div class="priceBlock">
+                            3,98 €
+                        </div>
+                        <div class="percentBlock">
+                            -10%
+                        </div>
+                        <div class="articleBlock">
+                            Art. Nr: Z42
+                        </div>
+                        <img src="img/sale.png" alt="">
+                    </div>
+                    <a href="" class="titleBlock">
+                        Bremsbelagsatz, Scheibenbremse Vorderachse (RIDEX)
+                    </a>
+                    <a href="" class="newPriceBlock">
+                        3,58 €
+                    </a>
+                    <a href="" class="lightTextBlock">
+                        inkl. 19% MwSt., zzgl. Versandkosten
+                    </a>
+                    <a href="" class="buttonBlock">
+                        In den Warenkorb
+                    </a>
+                </div>
+            </div>
+            <div class="saleWrapper">
+                <div class="saleItem">
+                    <div class="imageBlock">
+                        <div class="priceBlock">
+                            3,98 €
+                        </div>
+                        <div class="percentBlock">
+                            -10%
+                        </div>
+                        <div class="articleBlock">
+                            Art. Nr: Z42
+                        </div>
+                        <img src="img/sale.png" alt="">
+                    </div>
+                    <a href="" class="titleBlock">
+                        Bremsbelagsatz, Scheibenbremse Vorderachse (RIDEX)
+                    </a>
+                    <a href="" class="newPriceBlock">
+                        3,58 €
+                    </a>
+                    <a href="" class="lightTextBlock">
+                        inkl. 19% MwSt., zzgl. Versandkosten
+                    </a>
+                    <a href="" class="buttonBlock">
+                        In den Warenkorb
+                    </a>
+                </div>
+            </div>
+            <div class="saleWrapper">
+                <div class="saleItem">
+                    <div class="imageBlock">
+                        <div class="priceBlock">
+                            3,98 €
+                        </div>
+                        <div class="percentBlock">
+                            -10%
+                        </div>
+                        <div class="articleBlock">
+                            Art. Nr: Z42
+                        </div>
+                        <img src="img/sale.png" alt="">
+                    </div>
+                    <a href="" class="titleBlock">
+                        Bremsbelagsatz, Scheibenbremse Vorderachse (RIDEX)
+                    </a>
+                    <a href="" class="newPriceBlock">
+                        3,58 €
+                    </a>
+                    <a href="" class="lightTextBlock">
+                        inkl. 19% MwSt., zzgl. Versandkosten
+                    </a>
+                    <a href="" class="buttonBlock">
+                        In den Warenkorb
+                    </a>
+                </div>
+            </div>
+            <div class="saleWrapper">
+                <div class="saleItem">
+                    <div class="imageBlock">
+                        <div class="priceBlock">
+                            3,98 €
+                        </div>
+                        <div class="percentBlock">
+                            -10%
+                        </div>
+                        <div class="articleBlock">
+                            Art. Nr: Z42
+                        </div>
+                        <img src="img/sale.png" alt="">
+                    </div>
+                    <a href="" class="titleBlock">
+                        Bremsbelagsatz, Scheibenbremse Vorderachse (RIDEX)
+                    </a>
+                    <a href="" class="newPriceBlock">
+                        3,58 €
+                    </a>
+                    <a href="" class="lightTextBlock">
+                        inkl. 19% MwSt., zzgl. Versandkosten
+                    </a>
+                    <a href="" class="buttonBlock">
+                        In den Warenkorb
+                    </a>
+                </div>
+            </div>
+            <div class="saleWrapper">
+                <div class="saleItem">
+                    <div class="imageBlock">
+                        <div class="priceBlock">
+                            3,98 €
+                        </div>
+                        <div class="percentBlock">
+                            -10%
+                        </div>
+                        <div class="articleBlock">
+                            Art. Nr: Z42
+                        </div>
+                        <img src="img/sale.png" alt="">
+                    </div>
+                    <a href="" class="titleBlock">
+                        Bremsbelagsatz, Scheibenbremse Vorderachse (RIDEX)
+                    </a>
+                    <a href="" class="newPriceBlock">
+                        3,58 €
+                    </a>
+                    <a href="" class="lightTextBlock">
+                        inkl. 19% MwSt., zzgl. Versandkosten
+                    </a>
+                    <a href="" class="buttonBlock">
+                        In den Warenkorb
+                    </a>
                 </div>
             </div>
         </div>
